--- a/src/components/app-root/app-root.css
+++ b/src/components/app-root/app-root.css
@@ -1,15 +1,19 @@
-header {
-  background: #5851ff;
-  color: white;
-  height: 56px;
-  display: flex;
-  align-items: center;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+app-root {
+  display: block;
+  width: 100%;
+  max-width: 720px;
+  padding: 12px;
+  margin: auto;
+  margin-top: 24px;
 }
 
-h1 {
-  font-size: 1.4rem;
-  font-weight: 500;
-  color: #fff;
-  padding: 0 12px;
+header {
+  border-bottom: 2px solid #333;
+  margin-bottom: 24px;
+}
+
+header h1 {
+  padding: 0;
+  margin: 0;
+  padding-bottom: 12px;
 }
